--- a/DataLibrary/DataLibrary.csproj
+++ b/DataLibrary/DataLibrary.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A5AA070-CD54-4C4F-80E2-760289938DC1}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{AB070BE3-9752-4B59-A766-C1E9C9F6C953}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleLibrary</RootNamespace>
-    <AssemblyName>ConsoleLibrary</AssemblyName>
+    <RootNamespace>DataLibrary</RootNamespace>
+    <AssemblyName>DataLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,20 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Abstracts\CheckoutItem.cs" />
+    <Compile Include="FakeDb.cs" />
+    <Compile Include="HelperModels\ReturnLibraryItem.cs" />
+    <Compile Include="Interfaces\ICheckOutable.cs" />
+    <Compile Include="Interfaces\ILibraryItem.cs" />
+    <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\Library.cs" />
+    <Compile Include="Models\Magazine.cs" />
+    <Compile Include="Models\VideoGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\LibraryService.cs" />
-    <Compile Include="Utils\Menu.cs" />
-    <Compile Include="Utils\MenuOption.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataLibrary\DataLibrary.csproj">
-      <Project>{ab070be3-9752-4b59-a766-c1e9c9f6c953}</Project>
-      <Name>DataLibrary</Name>
-    </ProjectReference>
+    <Compile Include="Providers\LibraryProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
